# APS-system

./: .env.example  .gitignore  docker-compose.yml  justfile
.claude/: .ck.json  (+1 more)
aps-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  action_status_summary_vi.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_reset_pipeline.ps1
aps-backend/.github/workflows/: gemini-reviewer.yml
aps-backend/.just/: unix.just  windows.just
aps-backend/app/: __init__.py  main.py
aps-backend/app/config/: __init__.py  config.py  logger.py
aps-backend/app/db/: database.py
aps-backend/app/models/: __init__.py
aps-backend/app/scheduler/: __init__.py  gsystem_cron.py
aps-backend/app/schemas/: aps.py  common.py  erp.py  kpi_summary.py  llm.py  master.py  material_shortage.py  planning.py  purchase_request.py  sync.py  work_plan.py
aps-backend/app/scripts/: dump_databases.py  export_ontology_ttl.py  fetch_gsystem_data.py  run_pipeline.py  seed_gsystem_demo_data.py  seed_may2026_single_overload_scenario.py  seed_mock_data.py  seed_workplan_mock.py  verify-aps-db-snapshot.py
aps-backend/app/services/: neo4j_session.py
aps-backend/docs/ontology/: APS_NEO4J_OVERVIEW.md  NEO4J_CYPHER_QUERIES.md
aps-backend/migrations/: env.py
aps-backend/migrations/versions/: 2169c8ce60d1_add_action_card_columns.py  2ac934e03af2_add_routing_id_and_work_time_to_item_.py  3b1f9e7c4d02_add_gsystem_id_to_aps_item.py  51336be2a757_add_work_date_to_operation.py  72c8bf3dd570_add_status_to_aps_daily_plan.py  7f4bc6f20887_add_data_source_column_to_demand_and_.py  (+44 more)
aps-backend/ontology/: README.md  aps_tbox.ttl  example.ttl
backend/: .dockerignore  .gitignore  Dockerfile  Justfile  pyproject.toml
backend/app/: main.py
(+136 files in other folders)
