[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aps-vknic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.14.6206",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "owlrl>=7.1.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyshacl>=0.31.0",
    "rdflib>=7.6.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "alembic>=1.18.4",
    "apscheduler>=3.10.4",
    "langchain-openai>=1.2.0",
    "langchain-core>=1.3.0",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
huy-dev = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
